Inline createSyntheticFailures